# Nmap Changelog ($Id$); -*-text-*-

o [Ncat] SSL in listen mode was made to work on systems like BSD in
  which a socket inherits its blocking of non-blocking status from the
  listening socket. Thanks to Daniel Roethlisberger for reporting the
  bug and providing test results. [David]

o Rewrote the port list merging code in validate_scan_lists to be more
  maintainable [Josh Marlow]

o [Ncat] Made Ncat compile with versions of OpenSSL before 0.9.7. It
  would fail in ncat_openssl.c with the message "structure has no
  member named `it'". The problem was reported by Jaroslav Fojtik.
  [David]

o Tweaked validate_scan_lists so as to handle -SP and -SA at the same time when
  running nmap as nonroot or using IPv6.  It now combines the two port lists
  [Josh Marlow]

o Added another case to NmapOps::RawScan() to cover the case where we are using
  a SYN ping scan and issuing raw packets.  This fixes a bug wherein nmap would
  not display the "Raw packets sent..." message [Josh Marlow]

o Changed the ICMP ping probes to use a random non-zero ICMP id.  Some hosts
  seem to drop probes when ICMP id is 0 [Josh Marlow]

o Changed the default UDP ping port to 40125.  This appears to be a
  better port based on tests done by David [Josh Marlow]

o [Ncat] Handling of newlines on Windows has been improved. CRLF is
  automatically converted to bare LF when input is from the console, but
  not when it is from a pipe or a file. No newline translation is done
  on output (it was being done before). This makes it possible to
  transfer binary files with Ncat on Windows without any corruption.
  [David]

o Added initial SCTP port scanning support to Nmap.  SCTP is
  a layer 4 protocol used mostly for telephony related applications.
  This brings the following new features:
  o SCTP INIT chunk port scan (-sY): open ports return an INIT-ACK
    chunk, closed ones an ABORT chunk.  This is the SCTP equivalent
    of a TCP SYN stealth scan.